Design chapter review changes

--- a/Final Documentation/Final-Documentation.tex
+++ b/Final Documentation/Final-Documentation.tex
@@ -101,10 +101,11 @@
 \cfoot{\fancyplain{}{\thepage}}
 
 \newacro{evolutionary case study}[evolutionary case study]{\emph{Case Study which keeps on evolving with time}}
-\newacro{demo}[demo]{\emph{short for Demonstration}}
-\newacro{UML}[UML]{\emph{short for Unified Modeling Language}}
-\newacro{UI}[UI]{\emph{short for User Interface}}
+\newacro{demo}[demo]{\emph{Short for Demonstration}}
+\newacro{UML}[UML]{\emph{Short for Unified Modeling Language}}
+\newacro{UI}[UI]{\emph{Short for User Interface}}
 \newacro{Eclipse}[Eclipse]{\emph{Integrated Development Environment (IDE) for programming Java}}
+\newacro{Demon-BX}[Demon-BX]{\emph{Short for a demonstrator for bidirectional transformation}}
 
 \begin{document}    
 	
