--- a/Final Documentation/Final-Documentation.tex
+++ b/Final Documentation/Final-Documentation.tex
@@ -30,6 +30,7 @@
 \usepackage{microtype}
 \fi
 
+\usepackage{pdfpages}
 \usepackage{amsfonts}
 \usepackage{algorithmic}
 \usepackage[english]{babel}
