spelling and grammar

--- a/Final Documentation/Appendix/References.tex
+++ b/Final Documentation/Appendix/References.tex
@@ -21,7 +21,7 @@
 	\bibitem{emoflon-part4} A. Anjorin, E. Burdon, F. Deckwerth, R. Kluge, L. Kliegel, M. Lauder, E. Leblebici, D.T\"ogel, D. Marx, L. Patzina, S. Patzina, A. Schleich, S. E. Zander, J. Reinl\"ander, and M. Wieber, {\em An Introduction to Metamodelling and Graph Transformations with eMoflon. Part IV: Triple Graph Grammars.} [Online]. Available: 
 	https://emoflon.github.io/eclipse-plugin/release/handbook/part4.pdf
 	
-	\bibitem{bx-community} BX Community, [Online]. Available: http://bx-community.wikidot.com/
+	\bibitem{bx-community} {\em BX Community}, [Online]. Available: http://bx-community.wikidot.com/
 	
 	\bibitem{bx-examples} BX Community, [Online]. Available: http://bx-community.wikidot.com/examples:home
 	
@@ -36,6 +36,8 @@
 	\bibitem{share} {\em SHARE - Sharing Hosted Autonomous Research Environments}, [Online]. Available: http://is.ieis.tue.nl/staff/pvgorp/share/
 	
 	\bibitem{virtualbox} {\em VM Virtual Box}, [Online]. Available: https://www.virtualbox.org/
+	
+	\bibitem{google-forms} {\em Google Forms}, [Online]. Available: https://www.google.com/forms/about/
 	
 	\bibitem{understanding-bx} A. Bucaioni and R. Eramo, {\em Understanding bidirectional transformations with TGGs and JTL}, In Proc. of the Second International Workshop on BX, 2013.
 	
@@ -85,7 +87,7 @@
 	
 	\bibitem{validitythreatsinse} R. Feldt \& A. Magazinius, {\em Validity Threats in Empirical Software Engineering Research - An Initial Survey } , In Proc. of the Int'l Conf. on Software Engineering and Knowledge Engineering, issue March, pages 374-379, 2010.
 	
-	\bibitem{expinse} C. Wohlin, M. Höst, P. Runeson, M. Ohlsson, B. Regnell, and A. Wesslen, {\em Experimentation in software engineering: an introduction }, Kluwer Academic Publishers, 2000.
+	\bibitem{expinse} C. Wohlin, M. H\"ost, P. Runeson, M. Ohlsson, B. Regnell, and A. Wesslen, {\em Experimentation in software engineering: an introduction }, Kluwer Academic Publishers, 2000.
 	
 	
 \end{thebibliography}
