--- a/Final Documentation/Introduction/Introduction.tex
+++ b/Final Documentation/Introduction/Introduction.tex
@@ -29,7 +29,7 @@ To keep a focus on the above described problem statements and to relate to the w
 \begin{description}
 	\item [RQ 1:] What are the core requirements for implementing a successful bx demonstrator?
 	\item [RQ 2:] To what extent is such a bx demonstrator reusable?
-	\item [RQ 3:] Is it possible to teach the concepts of bx through a demonstrator?
+	\item [RQ 3:] Is there a need to teach the concepts of bx through a demonstrator?
 	\item [RQ 4:] Does an interactive GUI helps a user to increase his/her understanding related to bx concepts?
 \end{description}
 
@@ -226,7 +226,7 @@ Changes in one model may or may not cause any change in another correspondence m
 \end{defn} 
 
 \textit{Example:} In my demonstrator example, a \textit{Kitchen} model is consistent with a \textit{Grid} model when a mapping between \textit{itemSocket} and \textit{group} can be established such that itemSocket containing an item is paired with a group containing block(s). 
-Figure~\ref{fig:Running_Example_GUI} and Figure~\ref{fig:Running_Example_GUI_consistency} describe a concrete example of consistency preservation where, changes in \textit{Kitchen} (Kitchen model) i.e., movement of the sink should ensure the movement of the corresponding group with two horizontal blocks in \textit{Layout} (Grid model) in order to ensure consistency.
+Figure~\ref{fig:Running_Example_GUI} and Figure~\ref{fig:Running_Example_GUI_consistency} describe a concrete example of consistency preservation where changes in \textit{Kitchen} (Kitchen model) i.e., movement of the sink should ensure the movement of the corresponding group with two horizontal blocks in \textit{Layout} (Grid model) in order to ensure consistency.
 
 \begin{figure}[h]
 	\centering
