--- a/Final Documentation/Requirements/Requirements.tex
+++ b/Final Documentation/Requirements/Requirements.tex
@@ -12,7 +12,7 @@ Being a demonstrator for bx tool, a user must go through the entire process by h
 
 \textbf{\textit{FR2}}: User should be able to trigger the synchronization process
 
-Rather being automatic, the synchronization process should be triggered by the user during the process of trying and learning bx concepts out of the demonstrator. After manipulating the models' data, the user should decide when to initiate the synchonization process and visualize the views with updated models.
+Rather being automatic, the synchronization process should be triggered by the user during the process of trying and learning bx concepts out of the demonstrator. After manipulating the models' data, the user should decide when to initiate the synchronization process and visualize the views with updated models.
 
 \textbf{\textit{FR3}}: User can make changes only in one view before synchronization
 
@@ -29,7 +29,7 @@ Following are some of the non-functional end results (referred to as \textbf{NR}
 
 \textbf{\textit{NR1}}: Reduce the installation time of the bx tool
 
-The demonstrator should not take much time to install and should be up and running very fast. By making the demonstrator available online, the user needs nothing to install on his/her machine. The user has to enter the url in the browser and hence just a click away from trying the demonstrator based on a bx tool.
+The demonstrator should not take much time to install and should be up and running very fast. By making the demonstrator available online, the user needs nothing to install on his/her machine. The user has to enter the URL in the browser and hence just a click away from trying the demonstrator based on a bx tool.
 
 \textbf{\textit{NR2}}: Demonstrator should be fun to play with.
 
@@ -63,6 +63,6 @@ The application should occupy very less or no space on users' machine during ins
 
 Application's deployment process to get the example running should not be complex. Rather, it should involve simple steps so that it can be carried out by anyone in no time.
 
-\textbf{\textit{NR10}}: Products, Technologies, and tools
+\textbf{\textit{NR10}}: Products, Technologies, and Tools
 
 Updated version of the products, technologies, and tools should be used as per the requirements during the implementation work so that future enhancements can be carried out easily.
