--- a/Final Documentation/Appendix/References - Copy.tex
+++ b/Final Documentation/Appendix/References - Copy.tex
@@ -70,6 +70,10 @@
 	
 	\bibitem{javascript} D. Goodman and M. Morrison, {\em Javascript Bible}, Wiley Publishing Inc., 6th Edition, pages 1-8, Indianapolis, Indiana, 2007.
 	
+	\bibitem{designinterfaces} J. Tidwell, {\em Designing interfaces}, O'Reilly, vol. XXXIII, Pages 81-87, 2012.
+	
+	\bibitem{scenariobasedui} K. Kusano, M. Nakatani and T. Ohno, {\em Scenario-based interactive UI design}, In Proc. of the SIGCHI Conference on Human Factors in Computing Systems - CHI '13, 2013.
+	
 	\bibitem{servlet} J. Hunter and W. Crawford, {\em Java servlet programming}, vol. 37, 2001.
 	
 	\bibitem{funcandnonfuncreq} P. Sharma and S. Dhir, {\em Functional \& non-functional requirement elicitation and risk assessment for agile processes}. International Journal of Control Theory and Applications, vol. 9, pages 9005-9010, 2016.
