--- a/Final Documentation/Evaluation/Evaluation.tex
+++ b/Final Documentation/Evaluation/Evaluation.tex
@@ -4,7 +4,7 @@ Figure~\ref{fig:Evaluation_Phases} shows the phases of the entire evaluation pro
 
 The aim of this chapter is as follows: 
 
-"Analyse the outcome of the usage of an interactive demonstrator for the purpose of evaluation with respect to the user from the point of view of the researcher in the context of spreading the basic concepts of bidirectional transformation (bx) and making them understandable and accessible."
+"Analyse the outcome of the usage of an interactive demonstrator for the purpose of evaluation with respect to the user from the point of view of the researcher in the context of teaching the basic concepts of bidirectional transformation (bx) and making them understandable and accessible."
 
 \subsection{Goals}\label{subsec:goals}  
 In any research, there could be many cases and each case could focus on a number of different research questions, each of which leads to a different direction in developing solution strategies~\cite{semethods}. Hence, for any evaluation process, most important thing are selecting cases that are most relevant to the research and narrowing down the research questions only associated with the exact problems in hand. 
@@ -383,7 +383,7 @@ As five questions were asked, the result can be calculated for each question fro
 	\begin{minipage}{.5\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{figures/Prepost_q4}
-		\caption{Improvement for Q4)}
+		\caption{Improvement for Q4}
 		\label{fig:Prepost_q4}
 	\end{minipage}
 \end{figure}
