--- a/Final Documentation/Requirements/Requirements.tex
+++ b/Final Documentation/Requirements/Requirements.tex
@@ -27,42 +27,42 @@ Non-functional requirements cover all the remaining requirements which are not c
 
 Following are some of the non-functional end results (referred to as \textbf{NR} from now on) I have implemented in the demonstrator:
 
-\textbf{\textit{NR1}}: Reduce the installation time of the bx tool
+\textbf{\textit{NR1}}: Minimal installation time
 
-The demonstrator should not take much time to install and should be up and running very fast. By making the demonstrator available online, the user needs nothing to install on his/her machine. The user has to enter the URL in the browser and hence just a click away from trying the demonstrator based on a bx tool.
+The demonstrator should not take much time to install and should be up and running very fast. It should involve simple and easy steps so that it can be carried out by anyone.
 
-\textbf{\textit{NR2}}: Demonstrator should be fun to play with.
+\textbf{\textit{NR2}}: Fun to play
 
 The demonstrator should be able to attract more users by exploiting the features of the GUI and colors. It should be interactive and fun to play with during the entire process so that the user sticks to it.
 
-\textbf{\textit{NR3}}: Demonstrator's example should be simple
+\textbf{\textit{NR3}}: Simple example
 
 The user is going to try/use the demonstrator based on an example. This example should rather be less complex and less technical to understand to create interest and convince more target audience. Also, the user should be able to relate to the bx concepts through the example.
 
-\textbf{\textit{NR4}}: Demonstrator should be able to guide the user
+\textbf{\textit{NR4}}: User guidance
 
 During the entire time, while the user is using the demonstrator, it should be able to provide clear instructions/guidelines on what the user can do and try with it. The user should not feel like what to do with the demonstrator after a few minutes. Demonstrator should guide the user through all the aspects that are intended to be taught/learned with it.
 
-\textbf{\textit{NR5}}: Demonstrator should be informative
+\textbf{\textit{NR5}}: Informative
 
-Rather being just an online playing tool, the user should learn certain concepts of bx by using the demonstrator. The user should be able to relate to the concepts taught by the demonstrator with its scenarios.
+Rather, being just an online playing tool, the user should learn certain bx concepts by using the demonstrator. The user should be able to relate to the concepts taught by the demonstrator with the guided steps.
 
 \textbf{\textit{NR6}}: Public access
 
 The demonstrator should be accessible worldwide to all. Being a demonstrator for a bx tool, it's accessibility shouldn't be restricted to a few groups. rather, it should be accessible to all whoever wants to use the tool.
 
-\textbf{\textit{NR7}}: Robust \& Platform independent
+\textbf{\textit{NR7}}: Robust
 
-Application architecture should be easily maintainable and extendable. With changing requirements and needs, application architecture should be able to accommodate new changes and future enhancements. Also, the application should be platform independent i.e., it should run on any operating system and all kinds of browser. Different environment on user's machine should not affect the application.
+The application should be platform independent i.e., it should run on any operating system and all kinds of browser. Different environment on user's machine should not affect the application.
 
-\textbf{\textit{NR8}}: Non-Occupancy of Users' machine space
+\textbf{\textit{NR8}}: Minimal requirements on user's environment
 
-The application should occupy very less or no space on users' machine during installation or while running the example. 
+The application should occupy very less or no space on user's machine during installation or while running the example. 
  
 \textbf{\textit{NR9}}: Easily deployable project
 
 Application's deployment process to get the example running should not be complex. Rather, it should involve simple steps so that it can be carried out by anyone in no time.
 
-\textbf{\textit{NR10}}: Products, Technologies, and Tools
+\textbf{\textit{NR10}}: Extendable
 
-Updated version of the products, technologies, and tools should be used as per the requirements during the implementation work so that future enhancements can be carried out easily.
+Updated version of the products, technologies, and tools should be used as per the requirements during the implementation work so that future enhancements can be carried out easily. Also, application architecture should be easily maintainable and extendable. With changing requirements and needs, application architecture should be able to accommodate new changes and future enhancements.
