--- a/Final Documentation/Summary/Summary.tex
+++ b/Final Documentation/Summary/Summary.tex
@@ -2,7 +2,7 @@
 In this chapter, I am going to conclude the entire work done in this thesis. Section \ref{subsec:conclusion} summarizes the work done and explained in the previous chapters, and  Section \ref{subsec:futurework} discusses some future enhancements that can be applied to the current work.
 
 \subsection{Conclusion}\label{subsec:conclusion}
-With this thesis, I tried to solve the problem of a missing platform for spreading bx concepts by designing and implementing an interactive demonstrator built on the top of a bx tool. The principal task was to design an application framework with an interface to communicate with bx tools and demonstrate their features on an interactive user interface.
+With this thesis, I tried to solve the problem of a missing platform for teaching bx concepts by designing and implementing an interactive demonstrator built on the top of a bx tool. The principal task was to design an application framework with an interface to communicate with bx tools and demonstrate their features on an interactive user interface.
 
 In the process of solving the problems stated earlier, the following were my contributions:
 \begin{enumerate}
@@ -46,7 +46,7 @@ With these findings, I was able to answer the following research questions with 
 \end{table}
 
 \subsection{Future Work}\label{subsec:futurework}
-In this thesis, I have designed an application framework for the bx tool demonstrator, implemented the demonstrator based on a concrete example, and further evaluated the demonstrator to check its effectiveness in order to spread the bx concepts to a widespread audience to the best of my knowledge and belief. However, a few other features that were out-of-scope for this thesis can be added to the current work done. In the following paragraphs, I discuss some enhancements that can be applied to my work in the future. 
+In this thesis, I have designed an application framework for the bx tool demonstrator, implemented the demonstrator based on a concrete example, and further evaluated the demonstrator to check its effectiveness in order to teach bx concepts to a widespread audience to the best of my knowledge and belief. However, a few other features that were out-of-scope for this thesis can be added to the current work done. In the following paragraphs, I discuss some enhancements that can be applied to my work in the future. 
 \paragraph{New Rules}
 My current implementation of the eMoflon tool is based on two meta models and five transformation rules. However, it will be interesting to add a few more transformation rules for the existing meta-models. It will surely enhance the interactivity of the demonstrator and also test the capability of UI on handling new rules.
 
